# sapphire-plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-plugin.yml
libs/: CMakeLists.txt
scripts/: fix_file_comments.pl  fix_header_guards.pl
src/: configuration.h
src/clap/: sapphire-clap-entry-impl.cpp  sapphire-clap-entry-impl.h  sapphire-clap-entry.cpp
src/elastika/: editor.cpp  editor.h  elastika.h  patch.h  processor.cpp
src/galaxy/: editor.cpp  editor.h  galaxy.h  patch.h  processor.cpp
src/gravy/: editor.cpp  editor.h  gravy.h  patch.h  processor.cpp
src/shared/: editor_interactions.h  graphics_resources.cpp  graphics_resources.h  param_with_lag.h  processor_shim.h  sapphire_lnf.cpp  sapphire_lnf.h  tooltip.h
src/tube_unit/: editor.cpp  editor.h  patch.h  processor.cpp  tube_unit.h
